# queue-bridge-node

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: cleanup.yaml  publish.yaml
proto/: queue.proto
src/: main.rs  queue.rs
